# JuiceOS-Kernel32

./: .gitignore  Changelog  Makefile  README.md  ReadMe.md  TODO  run-ide.bat  run.bat  runscript-gen.json  runscript-gen.py
.github/workflows/: makefile.yml
core/: CMakeLists.txt  console.cpp  console.h  gdt.cpp  gdt.h  gdt.hpp  heap.cpp  heap.h  heap.hpp  idt.cpp  idt.h  idt.hpp  isr.cpp  isr.h  isr.hpp  kernel.cpp  kernel.h  kernel.hpp  multiboot.cpp  multiboot.h  paging.cpp  paging.hpp  shell.cpp  shell.h  stdarg.h  stdint.h  stdint.hpp  stdlib.cpp  stdlib.h  stdlib.hpp  string.cpp  string.h
core/asm/: idt.asm  kernel_launcher.asm
core/drivers/: ahci.cpp  ahci.h  ahci.hpp  ide.cpp  ide.h  ide.hpp  pci.cpp  pci.h  pci.hpp  pit.cpp  pit.h  pit.hpp  ports.cpp  ports.h  ports.hpp  ps2.cpp  ps2.h  ps2.hpp  screen.cpp  screen.h
core/drivers/non_ready/: ahci.cpp  ahci.h
core/filesystems/: fat16.cpp  fat16.h  fat16.hpp  mbr.cpp  mbr.h  mbr.hpp
docs/: drivers.txt  memory.txt
include/: gdt.hpp  idt.hpp  isr.hpp  kernel.hpp  paging.hpp  stdlib.hpp  string.hpp
include/asm/: gdt.asm
include/drivers/: ahci.hpp  pci.hpp  (+4 more)
src/: descriptor_table.h  descriptor_tables.c  descriptor_tables.h  gdt.cpp  gdt_idt.c  heap.c  heap.cpp  heap.h  heap.hpp  idt.cpp  isr.c  isr.cpp  isr.h  kernel.asm  kernel.c  kernel.cpp  kernel.h  kernel_launcher.asm  kheap.c  multiboot_header.asm  paging.c  paging.cpp  ports.c  ports.h  ps2.c  ps2.h  screen.c  screen.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.cpp  stdlib.h  stdlib.hpp  string.cpp  system.c  system.h  timer.c  timer.h
(+60 files in other folders)
